--- a/src/test/unit/output.css
+++ b/src/test/unit/output.css
@@ -1,10 +1,26 @@
+/**
+ * KEYFRAMES (multiline)
+ */
 @keyframes fade {
+  /* FROM */
   from {
     opacity: 0;
   }
+  /* TO */
   to {
     opacity: 1;
   }
+}
+
+/* .align-content-stretch { */
+.align-content-stretch {
+  /* align-content: stretch !important; */
+  align-content: stretch !important;
+}
+
+/* .blah > * { */
+.blah > * {
+  margin: 2px;
 }
 
 .abc, .def, .xyz {
@@ -19,22 +35,24 @@
   align-content: space-between !important;
 }
 
-.align-content-stretch {
-  align-content: stretch !important;
-}
-
-.blah > * {
-  margin: 2px;
-}
-
+/* .class-one, .class-two, .class-x */
 .class-one, .class-two, .class-x {
   background-color: gray;
 }
 
+/**
+ * .col comment (multiline)
+ */
 .col {
   flex: 1 0 0%;
 }
 
+/**
+ * row-cols-1
+ * row-cols-1
+ * row-cols-1
+ * (multiline)
+ */
 .row-cols-1 {
   flex: 0 0 auto;
   width: 100%;
@@ -57,21 +75,27 @@
 
 .row-cols-auto {
   flex: 0 0 auto;
+  /* width: auto; */
   width: auto;
 }
 
 @media (min-width: 576px) {
   .container-sm, .container {
+    /* max-width: 540px; */
     max-width: 540px;
   }
 }
 
+/* media (min-width: 768px) */
 @media (min-width: 768px) {
   .container-md, .container-sm, .container {
     max-width: 720px;
   }
 }
 
+/**
+ * media (min-width: 992px) (multiline)
+ */
 @media (min-width: 992px) {
   .container-lg, .container-md, .container-sm, .container {
     max-width: 960px;
